# mrds_extract

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
mrds_extract/: extract_save.py  fix_save_checksums.py
mrds_util/raw/: __init__.py  _monster.py  _save_file.py  _save_file_checksum_mapping.py  _util.py
patterns/: ram.hexpat  save_file.hexpat
tests/: util.py
tests/data/save_files/: 5160 - Monster Rancher DS (U)(Independent) - 00 - Initialized at game start.sav  5160 - Monster Rancher DS (U)(Independent) - 01 - After returning to ranch.sav  5160 - Monster Rancher DS (U)(Independent) - 02 - After returning to ranch then waiting a few extra seconds.sav  5160 - Monster Rancher DS (U)(Independent) - A.sav  5160 - Monster Rancher DS (U)(Independent) - B.sav
tests/data/save_files_edited/: 5160 - Monster Rancher DS (U)(Independent) - 01 - After returning to ranch.sav
tests/mrds_util/raw/: test_save_file.py
